# fmi_pv_forecaster

./: bifacial_modeling.md  bifacial_testfile.py  examples.md  model_explained.md  package_documentation.md  pyproject.toml  readme.md  testfile1.py  testfile2.py  testfile3_bifacial.py  usage_examples.md
.github/workflows/: pvfc_tests1.yml
licenses/: pvlib-license.md
src/fmi_pv_forecaster/: __init__.py  astronomical_calculations.py  meps_loader.py  pv_forecaster.py
src/fmi_pv_forecaster/helpers/: astronomical_calculations.py  default_parameters.py  irradiance_transpositions.py  output_estimator.py  panel_temperature_estimator.py  reflection_estimator.py
tests/: bifacial_testifile2.py  forecast_tests.py  meps_loader_test.py  output_estimation_test.py  output_estimation_tests.py  panel_temperature_test.py  panel_temperature_tests.py  pv_forecast_test.py  radiation_forecasting_test.py  radiation_forecasting_tests.py  radiation_transposition_test.py  radiation_transposition_tests.py  reflection_estimation_test.py  reflection_estimation_tests.py  small_physical_function_tests.py  snow_sliding_test.py  snow_sliding_tests.py
