[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fmi-pv-forecast"
version = "0.1.1"
description = "Forecasting tools for FMI PV data"
authors = [
    { name = "Timo Salola", email = "you@example.com" }
]
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "fmiopendata",
    "pvlib",
    "numpy"
]


[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]